<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/number"
        android:layout_width="368dp"
        android:layout_height="422dp"
        android:layout_marginTop="16dp"
        android:background="@color/whitesmoke"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number">

        <TextView
            android:id="@+id/btnBlack"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/btn_black"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnRed"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/btn_red"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnBlue"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/btn_blue"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnGreen"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/btn_green"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutColor">

        <TextView
            android:id="@+id/btnCount"
            android:layout_width="243dp"
            android:layout_height="94dp"
            android:background="@color/whitesmoke"
            android:gravity="center"
            android:text="@string/btn_count"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/btnClear"
            android:layout_width="125dp"
            android:layout_height="94dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="@string/btn_clear"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>